--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,10 @@ services:
       DB_PORT: 3306
       DB_NAME: flaskapp
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    restart: on-failure
+        
 
   db:
     image: mysql:8.0
@@ -23,6 +26,11 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   db_data:
